test/polyval/pv004.compile.err
"pv004.curry", line 7.8: Type error in application
f "a"

Term: "a"
Inferred type: [Char]
Expected type: [Int]
Types Int and Char are incompatible
